samples/_failures_safe/1761528429_9ccff0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eeaaa3a7.c: In function ‘main’:
./samples/SAFE/__tmp_eeaaa3a7.c:163:9: error: expected expression at end of input
  163 |         cleanup_compression_context(&
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_eeaaa3a7.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eeaaa3a7.c:163:9: error: expected declaration or statement at end of input
